--- a/templates/backend/tag_list.html
+++ b/templates/backend/tag_list.html
@@ -6,7 +6,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">标签p编辑</h4>
+                    <h4 class="modal-title" id="myModalLabel">标签编辑</h4>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
@@ -65,7 +65,7 @@
                                                                 <th>
                                                                     <button class="btn btn-warning edit"
                                                                             data-toggle="modal"
-                                                                            data-target="#edit_modal">编辑
+                                                                                data-target="#edit_modal">编辑
                                                                     </button>
                                                                 </th>
                                                                 <th>
