--- a/templates/backend/user_manage.html
+++ b/templates/backend/user_manage.html
@@ -6,21 +6,22 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">分类编辑</h4>
+                    <h4 class="modal-title" id="myModalLabel">编辑用户简介</h4>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label class="control-label">分类名称</label>
-                        <input class="form-control" name="edit_category"/>
+                        <label class="control-label">分类名</label>
+                        <textarea class="form-control" rows="4" name="profile"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                    <button type="button" class="btn btn-primary" name="edit_submit" value="">保存</button>
+                    <button type="button" class="btn btn-primary" name="edit_submit">保存</button>
                 </div>
             </div>
         </div>
     </div>
+
     <div id="page-wrapper">
         <div id="page-inner">
             <div class="row">
@@ -31,63 +32,60 @@
                         </div>
                         <div class="panel-body">
                             <ul class="nav nav-tabs">
-                                <li class="active" id="tab_home"><a href="#home" data-toggle="tab">编辑分类</a>
+                                <li class="active" id="tab_home"><a href="#home" data-toggle="tab">个人中心</a>
                                 </li>
-                                <li class="" id="tab_add"><a href="#add" data-toggle="tab">添加分类</a>
+                                <li class="" id="tab_add"><a href="#editpwd" data-toggle="tab">修改密码</a>
                                 </li>
                             </ul>
 
                             <div class="tab-content">
                                 <div class="tab-pane fade active in" id="home">
                                     <div class="panel panel-default">
-                                        <div class="panel-heading">
-                                            分类列表
-                                        </div>
                                         <div class="panel-body">
-                                            <div class="table-responsive">
-                                                {% if classify_list.count == 0 %}
-                                                    您暂无分类
-                                                {% else %}
-                                                    <table class="table table-striped">
-                                                        <thead>
-                                                        <tr>
-                                                            <th>#</th>
-                                                            <th>名称</th>
-                                                            <th>操作</th>
-                                                            <th>操作</th>
-                                                        </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                        {% for classify in classify_list %}
-                                                            <tr>
-                                                                <th>{{ forloop.counter }}</th>
-                                                                <th>{{ classify.title }}</th>
-                                                                <th>
-                                                                    <button data-toggle="modal"
-                                                                            data-target="#edit_modal"
-                                                                            class="btn btn-warning edit">编辑
-                                                                    </button>
-                                                                </th>
-                                                                <th>
-                                                                    <button id="{{ classify.nid }}"
-                                                                            class="btn btn-danger del">删除
-                                                                    </button>
-                                                                </th>
-                                                            </tr>
-                                                        {% endfor %}
-                                                        </tbody>
-                                                    </table>
-                                                {% endif %}
+                                            <div class="media">
+                                                <div class="media-left">
+                                                    <a href="/blog/{{ request.user.username }}/">
+                                                        <img class="media-object img-circle"
+                                                             style="height: 80px;width: 80px"
+                                                             src="/media/{{ request.user.avatar }}" alt="...">
+                                                    </a>
+                                                    <h4 class="center-block text-center"
+                                                        class="media-heading">{{ request.user.username }}</h4>
+                                                </div>
+                                                <div class="media-body">
+                                                    <h3>博客名：{{ request.user.blog.title }}</h3>
+                                                    <hr>
+                                                    <div id="profile">
+                                                        {% if request.user.profile == None %}
+                                                            用户暂无简介
+                                                        {% else %}
+                                                            {{ request.user.profile }}
+                                                        {% endif %}
+                                                    </div >
+                                                </div>
+                                                <div class="media-footer">
+                                                    <button class="btn btn-default pull-right" data-toggle="modal"
+                                                            data-target="#edit_modal" id="edit_profile">修改简介
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-pane fade" id="add">
+                                <div class="tab-pane fade" id="editpwd">
                                     <p>
                                         {% csrf_token %}
                                     <div class="form-group">
-                                        <label class="control-label">名称</label>
-                                        <input class="form-control" id="title">
+                                        <label class="control-label">旧的密码</label>
+                                        <input class="form-control" id="oldpwd">
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label">新的密码</label>
+                                        <input class="form-control" id="oldpwd">
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label">再次输入</label>
+                                        <input class="form-control" id="oldpwd">
                                     </div>
                                     <div>
                                         <button id="submit" class="btn btn-default">提交</button>
@@ -105,89 +103,16 @@
         <!-- /. PAGE WRAPPER  -->
     </div>
     <script>
-        //新建分类提交按钮点击事件
-        $("#submit").click(function () {
-            var title = $("#title").val();
-            $.ajax({
-                url: "/addClassify/",
-                type: "post",
-                data: {
-                    "title": title,
-                    "csrfmiddlewaretoken": $("[name='csrfmiddlewaretoken']").val()
-                },
-                success: function (data) {
-                    swal({
-                            title: "新建成功",
-                            type: "success",
-                            timer: 2000,
-                            showConfirmButton: false
-                        },
-                        window.location.href = "/blog/backend/classify_manage/"
-                    )
+        {#修改用户个人简介#}
+    $("#edit_profile").click(function () {
+        var old_profile = $("div[id='profile']").text().trim();
+        $("textarea").text(old_profile);
+    })
 
+    $("button[name='edit_submit']").click(function () {
+        var new_profile =  $("textarea").text();
 
-                }
-            })
-        })
+    })
 
-        //删除按钮点击事件
-        $("table").on("click", ".del", function () {
-            var id = $(this).attr("id");
-            var trEle = $(this).parent().parent();
-            $.ajax({
-                url: "/delClassify/",
-                type: "get",
-                data: {"id": id},
-                success: function (data) {
-                    if (data.status)
-                        trEle.remove();
-                }
-            })
-        })
-
-        //编辑按钮点击事件
-        $("table").on("click", ".edit", function () {
-            var id = $(this).parent().next().find("button").attr("id")
-            var value = $(this).parent().prev().text();
-            $("input[name='edit_category']").val(value);
-            $("button[name='edit_submit']").attr("value", id);
-        })
-
-        //模态框确认保存按钮点击事件
-        $("button[name='edit_submit']").click(function () {
-            var edit_value = $("input[name='edit_category']").val();
-            var edit_id = $(this).attr("value");
-            if (edit_value === "") {
-                swal({
-                    title: "",
-                    text: "名称不能为空",
-                    type: "warning",
-                    showConfirmButton: true,
-                    closeOnConfirm: true,
-                })
-                return false;
-            }
-            $.ajax({
-                url: "/blog/backend/edit_category/",
-                type: "get",
-                data: {"title": edit_value, "id": edit_id},
-                success: function (data) {
-                    if (data.status) {
-                        swal({
-                            title: "",
-                            text: data.msg,
-                            type: "success",
-                            showConfirmButton: false,
-                            timer: 1000
-                        })
-                        $("#edit_modal").modal("hide");
-                        {#window.location.href = "/blog/backend/classify_manage/";#}
-                        console.log( $("#" + edit_id).parent().prev().prev())
-                        $("#" + edit_id).parent().prev().prev().text(edit_value);
-                    }
-                }
-            })
-
-        })
     </script>
 {% endblock %}
