--- a/templates/login.html
+++ b/templates/login.html
@@ -20,14 +20,24 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">姓名</label>
                             <div class="col-md-6">
-                                <input type="text" class="form-control" id="username">
+                                <input type="text" class="form-control" id="username" value="{{ username }}">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">密码</label>
                             <div class="col-md-6">
-                                <input type="password" class="form-control" id="password">
+                                <input type="password" class="form-control" id="password" value="{{ password }}">
                             </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">
+                                <input type="checkbox" name="flag" value="1" {% if username != null %}
+                                       checked{% endif %}>记住密码
+                            </label>
+                            <label class="col-md-5 control-label">
+                                <a href="">忘记密码？</a>
+                            </label>
+
                         </div>
                         <div class="form-group">
                             <div class="col-md-offset-4 col-md-4">
@@ -53,6 +63,27 @@
 <!-- 引入封装了failback的接口--initGeetest -->
 <script src="/static/gt.js"></script>
 <script>
+    $("input[type='checkbox']").change(function () {
+        var flag = $("input[type='checkbox']").is(':checked');
+        $.ajax({
+            url: "/blog/backend/userManager/rem_user/",
+            type: "POST",
+            data: {
+                username: $('#username').val(),
+                password: $('#password').val(),
+                saveFlag: flag,
+                csrfmiddlewaretoken: $("[name='csrfmiddlewaretoken']").val(),
+            },
+            success: function (data) {
+                var vo = JSON.parse(data)
+                if (vo.status ==2) {
+                    alert(vo.msg)
+                }
+            }
+        })
+
+    })
+
     var handlerPopup = function (captchaObj) {
         captchaObj.onSuccess(function () {
             var validate = captchaObj.getValidate();
@@ -63,6 +94,7 @@
                 data: {
                     username: $('#username').val(),
                     password: $('#password').val(),
+                    saveFlag: $("input[type='checkbox']").is(':checked'),
                     csrfmiddlewaretoken: $("[name='csrfmiddlewaretoken']").val(),
                     geetest_challenge: validate.geetest_challenge,
                     geetest_validate: validate.geetest_validate,
