--- a/templates/foundPwd.html
+++ b/templates/foundPwd.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"><!--移动端适配-->
     <link href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css" rel="stylesheet"><!--统一浏览器格式-->
     <link rel="stylesheet" href="/static/mystyle.css">
+    <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.min.css">
+    <link href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" rel="stylesheet">
 </head>
 <body class="bgbody">
 <div class="container">
@@ -17,17 +19,31 @@
                     <div class="form-horizontal">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label class="col-md-3 control-label">姓名</label>
+                            <label class="col-md-3 control-label">注册手机号</label>
                             <div class="col-md-6">
-                                <input type="text" class="form-control" id="username" value="{{ username }}">
+                                <input type="text" class="form-control" id="phone">
+                            </div>
+                            <div class="col-md-2">
+                                <button class="btn btn-default" id="send_code" type="button">发送验证码</button>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">密码</label>
+                            <label class="col-md-3 control-label">验证码</label>
                             <div class="col-md-6">
-                                <input type="password" class="form-control" id="password" value="{{ password }}">
+                                <input type="text" class="form-control" id="code" placeholder="请输入手机接收的验证码">
                             </div>
                         </div>
+                        <div class="form-group text-center hidden" id="show_pwd">
+                            <div class="alert alert-info">
+                                <strong></strong>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-4 col-md-4">
+                                <button id="btn1" class="btn btn-success btn-block">找回密码</button>
+                            </div>
+                        </div>
+                        <label class="pull-right"><a href="/login/">前往登录？</a></label>
                     </div>
                 </div>
             </div>
@@ -35,5 +51,64 @@
         </div>
     </div>
 </div>
+<script src="/static/jquery-3.4.1.min.js"></script>
+<script src="/static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
+
+<script src="/static/countdown.js"></script>
+<script>
+    //发送验证码按钮点击事件
+    $("#send_code").click(function () {
+        var thisEle = this;
+        var phone = $("#phone").val();
+        var result = /^1[35678]\d{9}$/.test(phone);//正则表达式对用户输入的电话判断是否符合规范
+        if (result) {
+            $.ajax({
+                url: "/sendCode/",
+                type: "get",
+                data: {"phone": phone},
+                success: function (data) {
+                    if (data.code !== 0) {
+                        swal({
+                            title: "",
+                            text: data.data,
+                            type: "error",
+                            showConfirmButton: true
+                        })
+                    } else {
+                        countdown(thisEle);
+                    }
+                }
+            })
+        } else {
+            swal({
+                title: "",
+                text: "手机格式错误",
+                type: "error",
+                showConfirmButton: true
+            })
+        }
+    })
+
+    $("#btn1").click(function () {
+        var phone = $("#phone").val();
+        var code = $("#code").val();
+        $.ajax({
+            url: "/blog/backend/userManager/found_pwd/",
+            type: "POST",
+            data: {
+                "phone": phone,
+                "code": code,
+                csrfmiddlewaretoken: $("[name='csrfmiddlewaretoken']").val(),
+            },
+            success: function (data) {
+                if (!data.status){
+                    $("strong").text(data.msg);
+                    $("#show_pwd").removeClass("hidden")
+                }
+            }
+        })
+    })
+</script>
 </body>
 </html>
