--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -2,7 +2,7 @@
 
 {% block page-main %}
     <div class="panel panel-default">
-        <div class="alert alert-warning text-center">
+        <div class="alert alert-warning">
             <h3><strong>{{ article.title }}!</strong></h3>
         </div>
         <div class="panel-body">
