--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css" rel="stylesheet"><!--统一浏览器格式-->
     <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/mystyle.css">
+    <link href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
     <script src="/static/jquery-3.4.1.min.js"></script>
     <style>
         * {
@@ -111,7 +113,8 @@
                     <p><span>昵称：</span><span>{{ user.username }}</span></p>
                     <p><span>简介：</span><span>{{ user.profile }}</span></p>
                     <p><span>关注：</span><a data-toggle="modal"
-                                          data-target="#myModal_concern"><span id="concern_num">{{ concerned_users.count }}</span></a>
+                                          data-target="#myModal_concern"><span
+                            id="concern_num">{{ concerned_users.count }}</span></a>
                     </p>
                     <p>
                         <button class="btn btn-danger hide" id="cancel_concern">取消关注</button>
@@ -183,7 +186,8 @@
                                 </a>
                             </div>
                             <div class="media-body">
-                                <a href="/blog/{{ concerned.concerned.username }}/">  <h4 class="media-heading">{{ concerned.concerned.username }}</h4></a>
+                                <a href="/blog/{{ concerned.concerned.username }}/"><h4
+                                        class="media-heading">{{ concerned.concerned.username }}</h4></a>
                                 博客介绍：{{ concerned.concerned.profile }}
                             </div>
                             {% if request.user == user %}
@@ -205,14 +209,29 @@
 </div>
 <script src="/static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 <script>
+    console.log("{{ is_concerned }}")
     if ("{{ is_concerned }}" === "1") {
         $("#cancel_concern").removeClass("hide");
     }
-    if ("{{ is_concerned }}" === "0") {
+    if ("{{ is_concerned }}" === "0" || "{{ is_concerned }}" === "-1") {
         $("#concern").removeClass("hide");
     }
     $("#concern").click(function () {
         var concerned_id = "{{ user.nid }}"
+        if ("{{ is_concerned }}" === "-1") {
+            swal({
+                    title: "请登录后再关注！",
+                    text: "点击确认进行登录",
+                    type: "warning",
+                    showConfirmButton: true,
+                    showCancelButton: true
+                },
+                function () {
+                    location.href = "/login/"
+                }
+            );
+            return false;
+        }
         $.ajax({
             url: "/blog/addConcern/",
             type: "GET",
@@ -258,8 +277,8 @@
                 if (data.status) {
                     alert("取消关注成功");
                     elem.remove();
-                    var num =$("#concern_num").text();
-                    $("#concern_num").text(num-1)
+                    var num = $("#concern_num").text();
+                    $("#concern_num").text(num - 1)
                 } else {
                     alert("取消关注失败")
                 }
