--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <div class="article-list">
         {% if article_list.count == 0 %}
             <div class="alert alert-info">
-                <strong>该分类下暂无文章</strong>
+                <strong>暂无文章</strong>
             </div>
         {% endif %}
         {% for article in article_list %}
