--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,7 @@
                     <li><a href="javascript:void(0);"><span id="blog">个人博客</span></a></li>
                     <li><a href="/blog/backend/blog_manage/">后台管理</a></li>
                 {% endif %}
+                <li><a href="javascript:void(0);"><span id="contact">联系我们</span></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.username %}
