--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
         <li role="presentation"><a href="/index/">博客园</a></li>
         <li role="presentation"><a href="/blog/{{ user.username }}/">首页</a></li>
         <li role="presentation"><a href="javascript:void(0)" id="new_article_a">新文章</a></li>
-        <li role="presentation"><a href="#">联系我们</a></li>
+        <li role="presentation"><a href="/index/">联系我们</a></li>
         <li role="presentation"><a href="javascript:void(0)" id="manage_a">管理</a></li>
     </ul>
 </div>
