--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                     <li><a href="javascript:void(0);"><span id="blog">个人博客</span></a></li>
                     <li><a href="/blog/backend/blog_manage/">后台管理</a></li>
                 {% endif %}
-                <li><a href="javascript:void(0);"><span id="contact">联系我们</span></a></li>
+                <li><a href="#carousel-example-generic_contact"><span id="contact">联系我们</span></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.username %}
@@ -256,6 +256,41 @@
                             <span class="sr-only">Previous</span>
                         </a>
                         <a class="right carousel-control" href="#carousel-example-generic_3" role="button"
+                           data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+              <div class="panel panel-default">
+                <div class="panel-body"  style="padding: 0px">
+                     <div id="carousel-example-generic_contact" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic_contact" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic_contact" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic_contact" data-slide-to="2"></li>
+                        </ol>
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img src="/static/image/WX1.jpg" alt="...">
+                            </div>
+                            <div class="item">
+                                <img src="/static/image/WX2.jpg" alt="...">
+                            </div>
+                            <div class="item">
+                                <img src="/static/image/QQ.png" alt="...">
+                            </div>
+                        </div>
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-example-generic_contact" role="button"
+                           data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic_contact" role="button"
                            data-slide="next">
                             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
