--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>青春博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"><!--移动端适配-->
     <link href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css" rel="stylesheet"><!--统一浏览器格式-->
     <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.min.css">
